# VINS-Mono-Android

./: .gitignore  build.gradle  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/libs/: XXPermissions-18.0.aar
app/libs/VINS-Mobile-master/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
app/libs/VINS-Mobile-master/VINS_ios/: draw_result.hpp  feature_manager.hpp  feature_tracker.cpp  feature_tracker.hpp  global_param.cpp  global_param.hpp  inital_sfm.cpp  inital_sfm.hpp  initial_aligment.cpp  initial_aligment.hpp
app/libs/VINS-Mobile-master/VINS_ios/loop/: demoDetector.h  loop_closure.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
app/src/main/cpp/android/: android_wrapper.cpp
app/src/main/cpp/jni/: nativelib.cpp
app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: MainActivity.java  VinsJNI.java
app/src/main/java/com/vell/vins/: ImageUtils.java  JavaCamera.java  JavaCameraActivity.java  Vins.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
